# midaco-mpi-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
experiments/: generate_table_mpi.py  gpu_mpi_table.csv  plot_cmcs.py  plot_speedup.py  plot_speedup_nodes.py  report_parallel.tex  run_fgrish.sh  run_gklsh2d.sh  run_gklsh3d.sh  run_gklsh4d.sh  run_gklsh4d_serg.sh  run_gklss2d.sh  run_gklss3d.sh  run_gklss4d.sh  run_gklss4d_serg.sh  run_gpu_mpi_gklsh4d.sh  run_gpu_mpi_gklsh4d_serg.sh  run_gpu_mpi_gklss4d.sh  run_gpu_mpi_gklss4d_serg.sh  update_plots.sh
experiments/gklsh2d/: midaco.json
experiments/gklsh3d/: midaco.json
experiments/gklsh4d/: midaco.json
experiments/gklsh4d_serg/: midaco.json
experiments/gklss2d/: midaco.json
experiments/gklss3d/: midaco.json
experiments/gklss4d/: midaco.json
experiments/gklss4d_serg/: midaco.json
experiments/gpu_mpi/gklsh4d/: midaco_12_16_01.json  midaco_12_16_05.json  midaco_12_16_1.json  midaco_12_1_01.json  midaco_12_1_05.json  midaco_12_1_1.json  midaco_1_16_01.json  midaco_1_16_05.json  midaco_1_16_1.json  midaco_1_1_01.json  midaco_1_1_05.json  midaco_1_1_1.json  midaco_2_16_01.json  midaco_2_16_05.json  midaco_2_16_1.json  midaco_2_1_01.json  midaco_2_1_05.json  midaco_2_1_1.json  midaco_4_16_01.json  midaco_4_16_05.json  midaco_4_16_1.json  midaco_4_1_01.json  midaco_4_1_05.json  midaco_4_1_1.json  midaco_8_16_01.json  midaco_8_16_05.json  midaco_8_16_1.json  midaco_8_1_01.json  midaco_8_1_05.json  midaco_8_1_1.json
experiments/gpu_mpi/gklsh4d_serg/: midaco_12_16_01.json  midaco_12_16_05.json  midaco_12_16_1.json  midaco_12_1_01.json  midaco_12_1_05.json  midaco_12_1_1.json  midaco_1_16_01.json  midaco_1_16_05.json  midaco_1_16_1.json  midaco_1_1_01.json  midaco_1_1_05.json  midaco_1_1_1.json  midaco_2_16_01.json  midaco_2_16_05.json  midaco_2_16_1.json  midaco_2_1_01.json  midaco_2_1_05.json  midaco_2_1_1.json  midaco_4_16_01.json  midaco_4_16_05.json  midaco_4_16_1.json  midaco_4_1_01.json  midaco_4_1_05.json  midaco_4_1_1.json  midaco_8_16_01.json  midaco_8_16_05.json  midaco_8_16_1.json  midaco_8_1_01.json  midaco_8_1_05.json  midaco_8_1_1.json
experiments/gpu_mpi/gklss4d/: midaco_12_16_01.json  midaco_12_16_05.json  midaco_12_16_1.json  midaco_12_1_01.json  midaco_12_1_05.json  midaco_12_1_1.json  midaco_1_16_01.json  midaco_1_16_05.json  midaco_1_16_1.json  midaco_1_1_01.json  midaco_1_1_05.json  midaco_1_1_1.json  midaco_2_16_01.json  midaco_2_16_05.json  midaco_2_16_1.json  midaco_2_1_01.json  midaco_2_1_05.json  midaco_2_1_1.json  midaco_4_16_01.json  midaco_4_16_05.json  midaco_4_16_1.json  midaco_4_1_01.json  midaco_4_1_05.json  midaco_4_1_1.json  midaco_8_16_01.json  midaco_8_16_05.json  midaco_8_16_1.json  midaco_8_1_01.json  midaco_8_1_05.json  midaco_8_1_1.json
experiments/gpu_mpi/gklss4d_serg/: midaco_12_16_01.json  midaco_12_16_05.json  midaco_12_16_1.json  midaco_12_1_01.json  midaco_12_1_05.json  midaco_12_1_1.json  midaco_1_16_01.json  midaco_1_16_05.json  midaco_1_16_1.json  midaco_1_1_01.json  midaco_1_1_05.json  midaco_1_1_1.json  midaco_2_16_01.json  midaco_2_16_05.json  midaco_2_16_1.json  (+15 more)
experiments/grish/: midaco.json
samples/: common.hpp  mpi_sample.cpp  omp_sample.cpp
src/: example_MPI.cpp  example_OpenMP.cpp  midaco.c  midaco_core.c  midaco_core.h  midaco_mpi.cpp  midaco_mpi.hpp  midaco_omp.cpp  midaco_omp.hpp
(+60 files in other folders)
